# HousePricePredictionApp

./: .gitignore  Pipfile  README.md  app-docker-compose.yml  docker-compose.yml  mldev-docker-compose.yml  pyproject.toml
api/: dependencies.py  main.py  ml.py  models.py  utils.py
backend/: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.mldev  README.md  pyproject.toml
backend/api/: config.py  load_utils.py  main.py  ml.py  models.py  protocols.py
backend/api/entities/: __init__.py  house.py  options_list_output.py  property_type.py  sale_prices_predictions.py
backend/api/fields_data/: protocols.py
backend/api/prediction/: __init__.py  factory.py  predictor.py  protocols.py  utils.py
backend/api/providers/: __init__.py  artifact.py  factory.py
backend/api/services/: __init__.py  house.py
backend/api/utils/: __init__.py  house_factory.py  load_utils.py
backend/notebooks/: 01-initial-cleaning.ipynb  02-exploratory-data-analysis.ipynb  03-data-preprocessing.ipynb  04-model-selection.ipynb  05-hyperparameter-tuning.ipynb  build-artifacts.ipynb
frontend/: Dockerfile.app  README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: FeatureAreaField.jsx  FeatureCurrencyField.jsx  FeatureDateField.jsx  FeatureRangeField.jsx  FeatureSelectField.jsx  FeatureTextField.jsx  PredictButton.jsx  PredictionArea.jsx  index.js
frontend/src/containers/: Features.jsx
notebooks/: 01-exploratory-data-analysis.ipynb  01-initial-cleaning.ipynb  02-exploratory-data-analysis.ipynb  03-data-preprocessing.ipynb  04-model-selection.ipynb  05-hyper-parameter-tuning.ipynb  05-hyperparameter-tuning-and-stacked-estimator.ipynb  05-hyperparameter-tuning.ipynb  05-regression-models-for-each-property-type.ipynb
